# ttspotify-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  setup.ps1  setup.sh
src/: config.rs  error.rs  i18n.rs  lib.rs  logging.rs  main.rs  service.rs  services.rs  track.rs  wizard.rs
src/audio/: mod.rs  pipeline.rs  resampler.rs  volume.rs
src/bot/: auth.rs  commands.rs  mod.rs  runner.rs  state.rs
src/gui/: config_dialog.rs  manager.rs  mod.rs  progress.rs  tray.rs  update_dialog.rs
src/i18n/: en.lang
src/spotify/: auth.rs  metadata.rs  mod.rs  player.rs  recovery.rs  sink.rs  types.rs
src/tt/: audio_inject.rs  connection.rs  mod.rs
src/update/: apply.rs  github.rs
src/youtube/: metadata.rs  mod.rs  player.rs  setup.rs  types.rs
