[package]
name = "tt-spotify-bot"
version = "0.1.0"
edition = "2021"
default-run = "tt-spotify-bot"
license = "GPL-3.0-or-later"

[dependencies]
# TeamTalk SDK (local)
teamtalk = { git = "https://github.com/BlindMaster24/TeamTalkRust.git", branch = "main", features = ["logging"] }

# Spotify (librespot - native Rust)
librespot-core = "0.8"
librespot-playback = "0.8"
librespot-metadata = "0.8"
librespot-oauth = "0.8"

# YouTube (rustypipe - GPL-3)
rustypipe = "0.11"

# YouTube audio: HTTP fetch + decode + resample.
# symphonia handles Opus and AAC/M4A (the two codecs YouTube serves).
# rubato resamples 48k Opus down to the 44.1k pipeline rate.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
symphonia = { version = "0.5", features = ["isomp4", "aac"] }
rubato = "0.16"

# Plugin zip extraction for the YouTube binaries auto-installer.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Audio
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Utilities
regex = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
parking_lot = "0.12"

[profile.release]
strip = true
lto = true
panic = "abort"
# Single codegen unit: with fat LTO already on, this lets the optimizer see the
# whole crate graph as one unit for slightly smaller/faster output. Costs some
# link time (release builds only; debug/check unaffected).
codegen-units = 1

# GUI (Windows tray + config editor)
[target.'cfg(windows)'.dependencies]
wxdragon = "0.9"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.5"

[[bin]]
name = "tt-spotify-bot"
path = "src/main.rs"

